Add build files for GitHub Pages deployment

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Production build
-dist/
+# dist/ - commented out for GitHub Pages
 build/
 
 # Environment variables
